src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #4d73ff;
  --ifm-color-primary-dark: #0032e6;
  --ifm-color-primary-darker: #0027b3;
  --ifm-color-primary-darkest: #001c80;
  --ifm-color-primary-light: #809bff;
  --ifm-color-primary-lighter: #b3c3ff;
  --ifm-color-primary-lightest: #e5ebff;
  --ifm-code-font-size: 95%;
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

/* Bump up the base font a little */
main {
  font-size: 18px;
}

/* 
The following styles are a bit of a hack to get the light/dark mode toggle
to stay in the header on mobile displays while also removing the sidemenu toggle
button as it is not needed.
*/
div.navbar__toggle {
  display: none !important;
}

@media screen and (max-width: 997px) {
  div.react-toggle.displayOnlyInLargeViewport_node_modules-\@docusaurus-theme-classic-src-theme-Navbar- {
    display: block !important;
  }
}

